<resources>
    <string name="app_name">tldroid</string>
    <string name="prompt">tldr_</string>
    <string name="styled_html" translatable="false">
        <![CDATA[
        <html>
            <head>
                <style type="text/css">
                    @font-face {
                        font-family: tldr;
                        src: url("file:///android_asset/RobotoMono-Regular.ttf")}
                    body {
                        font-family: tldr;
                        font-size: %4$fpx;
                        color: #%2$s;
                        margin: %5$fpx %5$fpx %5$fpx %5$fpx;
                    }
                    h1 {display:none;}
                    a {color: #%3$s;}
                    pre {white-space: pre-wrap;}
                    code {color: #%6$s; font-weight: bold; padding-left: 1.2em;}
                    ul {list-style:none; padding-left:0;}
                    blockquote { font-size: larger }
                    .literal {color: #%7$s; font-weight: normal;}
                </style>
            </head>
            <body>%1$s</body>
            </html>"
        ]]>
    </string>
    <string name="empty_html">
        <![CDATA[
            <blockquote>
                This command is not yet available.<br />
                <a href="https://github.com/tldr-pages/tldr/blob/master/CONTRIBUTING.md">Submit new command to tldr</a>
            </blockquote>
        ]]>
    </string>
    <string name="info_html">
        <![CDATA[
            <h2>Application</h2>
            <p>Last refreshed: %1$s</p>
            <p>Total commands: %2$d</p>
        ]]>
    </string>
    <string name="share">Share</string>
    <string name="info">Information</string>
    <string name="never">Never</string>
    <string name="run">Run</string>
    <string name="run_warning">Command may work differently on Android; run at your own risk.</string>
    <string name="all_commands">All commands</string>
    <string name="settings">Settings</string>
    <string name="solarized">Solarized</string>
    <string name="afterglow">Afterglow</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="update">Update</string>
</resources>
