<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/themedBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">

        <ImageButton
            android:id="@+id/settings_button"
            android:contentDescription="@string/settings"
            app:srcCompat="@drawable/ic_themes_white_24dp"
            android:tint="?android:attr/textColorPrimary"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout" />

        <ImageButton
            android:id="@+id/info_button"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/ic_info_white_24dp"
            android:tint="?android:attr/textColorPrimary"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            app:layout_constraintTop_toTopOf="@id/settings_button"
            app:layout_constraintRight_toLeftOf="@id/settings_button"
            app:layout_constraintBottom_toBottomOf="@id/settings_button" />

        <ImageButton
            android:id="@+id/list_button"
            android:contentDescription="@string/all_commands"
            app:srcCompat="@drawable/ic_list_white_24dp"
            android:tint="?android:attr/textColorPrimary"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            app:layout_constraintTop_toTopOf="@id/info_button"
            app:layout_constraintRight_toLeftOf="@id/info_button"
            app:layout_constraintBottom_toBottomOf="@id/info_button" />

        <ImageButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/update"
            android:padding="@dimen/padding"
            android:tint="?android:attr/textColorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/list_button"
            app:layout_constraintRight_toLeftOf="@id/list_button"
            app:layout_constraintTop_toTopOf="@id/list_button"
            app:srcCompat="@drawable/ic_update_white_24dp" />

        <TextView
            android:id="@+id/prompt"
            android:text=">"
            android:textSize="@dimen/text_size_large"
            android:textColor="?android:attr/textColorHint"
            app:monospace="@{true}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.3" />

        <AutoCompleteTextView
            android:id="@+id/edit_text"
            android:hint="@string/prompt"
            android:textSize="@dimen/text_size_large"
            app:monospace="@{true}"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionSearch"
            android:completionThreshold="1"
            android:background="@null"
            android:popupBackground="?attr/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/prompt"
            app:layout_constraintLeft_toRightOf="@id/prompt"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/prompt"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
